--- a/view/frontend/templates/form/newsletter.phtml
+++ b/view/frontend/templates/form/newsletter.phtml
@@ -11,22 +11,29 @@
     <fieldset class="fieldset">
         <?= $block->getBlockHtml('formkey') ?>
         <legend class="legend"><span><?= $block->escapeHtml(__('Subscription option')) ?></span></legend><br>
+
+        <?php if($block->iysDataHelper->isIysEmailEnabled()):?>
         <div class="field choice">
             <input type="hidden" name="is_subscribed" value="0">
             <input type="checkbox" name="is_subscribed" id="subscription" value="1" title="<?= $block->escapeHtmlAttr(__('Email Subscription')) ?>"<?php if ($block->getIsSubscribed()) : ?> checked="checked"<?php endif; ?> class="checkbox">
             <label for="subscription" class="label"><span><?= $block->escapeHtml(__('Email Subscription')) ?></span></label>
         </div>
+        <?php endif?>
+        <?php if($block->iysDataHelper->isIysSmsEnabled()):?>
         <div class="field choice">
             <input type="hidden" name="is_sms_confirmed" value="0">
             <input type="checkbox" name="is_sms_confirmed" id="sms_permission" value="1" title="<?= $block->escapeHtmlAttr(__('SMS Notification Permission')) ?>"<?php if ($block->isSmsPermConfirmed()) : ?> checked="checked"<?php endif; ?> class="checkbox">
             <label for="sms_permission" class="label"><span><?= $block->escapeHtml(__('I permit to get SMS Notification')) ?></span></label>
         </div>
+        <?php endif?>
 
+        <?php if($block->iysDataHelper->isIysCallEnabled()):?>
         <div class="field choice">
             <input type="hidden" name="is_call_confirmed" value="0">
             <input type="checkbox" name="is_call_confirmed" id="call_permission" value="1" title="<?= $block->escapeHtmlAttr(__('Call Permission')) ?>"<?php if ($block->isCallPermConfirmed()) : ?> checked="checked"<?php endif; ?> class="checkbox">
             <label for="call_permission" class="label"><span><?= $block->escapeHtml(__('I permit to get Call from this provider')) ?></span></label>
         </div>
+        <?php endif?>
         <?php /* Extensions placeholder */ ?>
         <?= $block->getChildHtml('customer.form.newsletter.extra') ?>
     </fieldset>
