--- a/view/frontend/templates/form/register.phtml
+++ b/view/frontend/templates/form/register.phtml
@@ -308,7 +308,7 @@ $formData = $block->getFormData();
         <div class="field required">
             <label for="telephone" class="label"><span><?= __('Telephone') ?></span></label>
             <div class="control">
-                <input type="text" name="telephone" id="telephone" value="<?php echo $block->escapeHtml($block->getFormData()->getTelephone()) ?>" title="<?php echo __('Telephone') ?>" class="input-text" data-validate="{required:true}">
+                <input type="text" name="telephone" id="telephone" value="<?php echo $block->escapeHtml($block->getFormData()->getTelephone()) ?>" title="<?php echo __('Telephone') ?>" required class="input-text" data-validate="{required:true}">
             </div>
         </div>
         <?php endif;?>
